--- a/index.html
+++ b/index.html
@@ -16,27 +16,28 @@
         <header>
             <div class="header-top">
                 <div class="left-controls">
-                    <button id="addLinkBtn" class="compact-btn" title="새 링크 추가">
-                        <i class="fas fa-plus"></i>
-                    </button>
+                    <div class="group-controls">
+                        <button id="addCategoryBtn" class="simple-btn" onclick="linkCollection.openCategoryModal()">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                        <button id="manageCategoriesBtn" class="simple-btn" onclick="linkCollection.openCategoryModal()">
+                            <i class="fas fa-cog"></i>
+                        </button>
+                    </div>
                     <div class="search-group">
-                        <input type="text" id="searchInput" placeholder="링크 검색..." class="compact-search">
+                        <input type="text" id="searchInput" class="clean-search" placeholder="링크 검색...">
                         <div class="category-dropdown">
-                            <button id="categoryDropdownBtn" class="dropdown-btn" title="카테고리 선택">
+                            <button id="categoryDropdownBtn" class="clean-dropdown">
                                 <span id="currentCategoryText">전체</span>
                                 <i class="fas fa-chevron-down"></i>
                             </button>
                             <div id="categoryDropdownMenu" class="dropdown-menu">
-                                <div class="dropdown-item active" data-category="all">전체</div>
-                                <div id="dropdownCategoryButtons"></div>
+                                <div class="dropdown-item" data-category="all">전체</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="right-controls">
-                    <button id="manageCategoriesBtn" class="compact-btn" title="카테고리 관리">
-                        <i class="fas fa-cog"></i>
-                    </button>
                     <button id="themeToggle" class="compact-btn" title="테마 변경">
                         <i class="fas fa-moon"></i>
                     </button>
