--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-top">
                 <div class="left-controls">
                     <div class="group-controls">
-                        <button id="addCategoryBtn" class="simple-btn" onclick="linkCollection.openCategoryModal()">
+                        <button id="addCategoryBtn" class="simple-btn" onclick="linkCollection.quickAddCategory()">
                             <i class="fas fa-plus"></i>
                         </button>
                         <button id="manageCategoriesBtn" class="simple-btn" onclick="linkCollection.openCategoryModal()">
